# storage/api-docs/api-docs.json
@@ -38,13 +38,65 @@
                         "description": "Forbidden"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Store new post",
+                "description": "Returns post data",
+                "operationId": "storePost",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "image",
+                                    "title",
+                                    "content"
+                                ],
+                                "properties": {
+                                    "image": {
+                                        "description": "File (jpeg,png,jpg,gif,svg)",
+                                        "type": "string",
+                                        "format": "file"
+                                    },
+                                    "title": {
+                                        "description": "Title",
+                                        "type": "string"
+                                    },
+                                    "content": {
+                                        "description": "Content",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Successful operation"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                }
             }
         }
     },
     "tags": [
         {
-            "name": "Products",
-            "description": "API Endpoints of Products"
+            "name": "Posts",
+            "description": "API Endpoints of Posts"
         }
     ]
 }
